<resources>
    <string name="app_name">HouseHelper</string>
    <string name="logout">Logout</string>
    <string name="main_activity">Main Activity</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_up">Sign up</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="create_house">Create House</string>
    <string name="join_house">Join House</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="house_number">House number</string>
    <string name="apartment_number">Apartment number</string>
    <string name="household_password">Household password</string>
    <string name="join_household_info">To join household you have to input household identifier and household password</string>
    <string name="household_identifier">Household identifier</string>
    <string name="house_settings">House settings</string>
    <string name="settings">Settings</string>
    <string name="tasks">Tasks</string>
    <string name="balance">Balance</string>
    <string name="hello">Hello</string>
    <string name="household_info_welcome">Info about your assigned household</string>
    <string name="household_info_welcome_no_household">You don\'t have assigned household</string>
    <string name="household_info_id">Your household ID:</string>
    <string name="household_info_data">House address</string>
    <string name="reset_house_password">Reset house password</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="balance_change_btn">Add income or expense</string>
    <string name="leave_household_button">Leave household</string>
    <string name="incorrect_e_mail">E-mail address is incorrect</string>
    <string name="start_date_before">Start date must be before the end date</string>
    <string name="end_date_after">The end date must be after the start date.</string>
    <string name="income_expense_history">Income and expense history</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="password_updated">Password has been updated</string>
    <string name="no_household_document">Household document does not exist</string>
    <string name="document_retrieve_failed">Failed to retrieve document</string>
    <string name="household_left">Household left successfully</string>
    <string name="reset_password">Reset password</string>
    <string name="show_balance_list_btn">Income and expense history</string>
    <string name="user_settings">User settings</string>
    <string name="shopping_list">Shopping list</string>
    <string name="add_shopping_list">Add shopping list</string>
    <string name="product">Product</string>
    <string name="add_product">Add product</string>
    <string name="shopping_lists_welcome">Your shopping lists</string>
    <string name="show_shopping_lists">See your shopping lists</string>
    <string name="shopping_list_name">Shopping list name</string>
    <string name="shopping_list_welcome">Your Shopping List</string>
    <string name="add_car">Add new car</string>
    <string name="car_make">Make</string>
    <string name="car_model">Model</string>
    <string name="vin_number">VIN Number</string>
    <string name="MOT">MOT</string>
    <string name="car_insurance">Insurance</string>
    <string name="car_first_registration">First registration date</string>
    <string name="cars_list">List of cars</string>
    <string name="list_cars">Cars list</string>
    <string name="plates">Plates</string>
    <string name="update_car">Update your car data</string>
    <string name="car_remove_btn">Remove car</string>
    <string name="update_mot">Update MOT expire date</string>
    <string name="update_insurance">Update insurance expire date</string>
    <string name="date">Date</string>
    <string name="task_interval">Interval</string>
    <string name="task_private">Is task private?</string>
    <string name="task_task">Task</string>
    <string name="add_task">Add task</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="task_recursive">Is task recursive?</string>
    <string name="tasks_list">List of remembered tasks</string>

    <string-array name="balance_change_type_display">
        <item>@string/income</item>
        <item>@string/expense</item>
    </string-array>
    <string-array name="balance_change_type_value">
        <item>income</item>
        <item>expense</item>
    </string-array>

    <string-array name="task_interval_type_display">
        <item>@string/daily</item>
        <item>@string/weekly</item>
        <item>@string/monthly</item>
    </string-array>
    <string-array name="task_interval_type_value">
        <item>daily</item>
        <item>weekly</item>
        <item>monthly</item>
    </string-array>
</resources>