<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateHouse">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/city"
        android:background="#30ffffff"
        android:hint="@string/city"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_baseline_location_city_24"
        android:drawablePadding="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/street"
        android:layout_below="@id/city"
        android:background="#30ffffff"
        android:hint="@string/street"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_baseline_horizontal_distribute_24"
        android:drawablePadding="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/house_number"
        android:layout_below="@id/street"
        android:background="#30ffffff"
        android:hint="@string/house_number"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_baseline_house_24"
        android:drawablePadding="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/apartment_number"
        android:layout_below="@id/house_number"
        android:background="#30ffffff"
        android:hint="@string/apartment_number"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_baseline_apartment_24"
        android:drawablePadding="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/house_password"
        android:layout_below="@id/apartment_number"
        android:background="#30ffffff"
        android:hint="@string/household_password"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_house_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/house_password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/create_house"
        app:cornerRadius="100dp"
        android:backgroundTint="#30ffffff"
        app:strokeColor="@color/black"
        android:textColor="@color/black"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

</RelativeLayout>