<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTask">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/task_task"
        android:background="#30ffffff"
        android:hint="@string/task_task"
        android:layout_margin="10dp"
        android:padding="20dp" />

    <CheckBox
        android:id="@+id/task_recursive_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/task_task"
        android:background="#30ffffff"
        android:padding="20dp"
        android:text="@string/task_recursive" />

    <LinearLayout
        android:id="@+id/task_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_recursive_checkbox"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/task_interval_time"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date" />

        <Spinner
            android:id="@+id/task_interval_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_centerInParent="true"
            android:background="#30ffffff" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/task_private_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/task_interval"
        android:background="#30ffffff"
        android:padding="20dp"
        android:text="@string/task_private" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_task_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_private_checkbox"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/add_task"
        app:cornerRadius="100dp"
        android:backgroundTint="#30ffffff"
        app:strokeColor="@color/black"
        android:textColor="@color/black"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

</RelativeLayout>