<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListShoppingLists">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shopping_lists_welcome"
        android:text="@string/shopping_lists_welcome"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/date_pickers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shopping_lists_welcome"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_date_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/from" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/end_date_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/to" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shopping_lists"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/date_pickers"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>