<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Balance">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/balance_change_amount"
        android:background="#30ffffff"
        android:hint="@string/amount"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_baseline_money_24"
        android:drawablePadding="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/balance_change_description"
        android:layout_below="@id/balance_change_amount"
        android:background="#30ffffff"
        android:hint="@string/description"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_baseline_border_color_24"
        android:drawablePadding="20dp" />

    <Spinner
        android:id="@+id/balance_change_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/balance_change_description"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:padding="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/balance_change_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/balance_change_type"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/balance_change_btn"
        app:cornerRadius="100dp"
        android:backgroundTint="#30ffffff"
        app:strokeColor="@color/black"
        android:textColor="@color/black"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

</RelativeLayout>